game_plugin/target/release/build/crossbeam-utils-85ed7b41279a0ba9/stderr
error[E0412]: cannot find type `AtomicU128` in module `core::sync::atomic`
    --> <anon>:1:38
     |
1    |   pub type Probe = core::sync::atomic::AtomicU128;
     |                                        ^^^^^^^^^^ help: a struct with a similar name exists: `AtomicU16`
     | 
    ::: /home/mramirez/.rustup/toolchains/nightly-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/core/src/sync/atomic.rs:2138:1
     |
2138 | / atomic_int! {
2139 | |     cfg(target_has_atomic = "16"),
2140 | |     cfg(target_has_atomic_equal_alignment = "16"),
2141 | |     stable(feature = "integer_atomics_stable", since = "1.34.0"),
...    |
2154 | |     u16 AtomicU16 ATOMIC_U16_INIT
2155 | | }
     | |_- similarly named struct `AtomicU16` defined here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0412`.
